fix spacing

--- a/src/components/book/Timeform.module.scss
+++ b/src/components/book/Timeform.module.scss
@@ -1,6 +1,5 @@
 .root {
   display: flex;
-  padding: 2ch 0;
   position: relative;
   flex-grow: 1;
   width: 100%;
